--- a/.github/workflows/master-restaurant.yml
+++ b/.github/workflows/master-restaurant.yml
@@ -7,7 +7,6 @@ on:
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}/restaurant
-  WORKING_DIR: restaurant
 
 jobs:
   build:
@@ -15,7 +14,7 @@ jobs:
     
     defaults:
       run:
-        working-directory: ${{ env.WORKING_DIR }}
+        working-directory: ./restaurant
 
     permissions:
       contents: read
