--- a/.github/workflows/master-restaurant.yml
+++ b/.github/workflows/master-restaurant.yml
@@ -48,6 +48,9 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=semver,pattern={{version}}
+            type=sha
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
