--- a/.github/workflows/master-restaurant.yml
+++ b/.github/workflows/master-restaurant.yml
@@ -3,6 +3,8 @@ name: Build & Publish - restaurant
 on:
   push:
     branches: [ "master" ]
+  tags:
+    - 'v[0-9]+.[0-9]+.[0-9]+'
 
 env:
   REGISTRY: ghcr.io
