--- a/.github/workflows/master-shared.yml
+++ b/.github/workflows/master-shared.yml
@@ -31,6 +31,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
+          images: shared # unused
           tags: |
             type=sha
       - name: Publish with Gradle
