--- a/.github/workflows/master-shared.yml
+++ b/.github/workflows/master-shared.yml
@@ -10,7 +10,7 @@ jobs:
     
     defaults:
       run:
-        working-directory: restaurant
+        working-directory: shared
 
     permissions:
       contents: read
