--- a/.github/workflows/master-shared.yml
+++ b/.github/workflows/master-shared.yml
@@ -34,6 +34,8 @@ jobs:
           images: shared # unused
           tags: |
             type=sha
+      - name: Debug
+        run: echo ${{ steps.meta.outputs.labels[0] }}
       - name: Publish with Gradle
         run: ./gradlew -Pversion=${{ steps.meta.outputs.labels[0] }} publish
         env:
