--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,4 +1,4 @@
-name: Build & Publish - restaurant
+name: Build & Publish
 
 on:
   push:
@@ -9,7 +9,7 @@ env:
   IMAGE_NAME: ${{ github.repository }}/restaurant
 
 jobs:
-  build:
+  restaurant:
     runs-on: ubuntu-latest
     
     defaults:
@@ -57,3 +57,38 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+  shared:
+    runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: shared
+
+    permissions:
+      contents: read
+      packages: write
+
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'corretto'
+      - name: Set up Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 8.0.2
+      - name: Extract metadata (tags, labels) for Gradle publishing
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: shared # unused
+          tags: |
+            type=sha
+      - name: Debug
+        run: echo ${{ steps.meta.outputs.labels[0] }}
+      - name: Publish with Gradle
+        run: ./gradlew -Pversion=${{ steps.meta.outputs.labels[0] }} publish
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
