Add order service

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -29,6 +29,8 @@ jobs:
           gradle-version: 8.0.2
       - name: Build with Gradle
         run: ./gradlew build
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
@@ -79,6 +81,8 @@ jobs:
           gradle-version: 8.0.2
       - name: Build with Gradle
         run: ./gradlew build
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       - name: Set up Docker Buildx
