--- a/k8s/axonserver-service.yaml
+++ b/k8s/axonserver-service.yaml
@@ -1,12 +1,6 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.28.0 (HEAD)
-  creationTimestamp: null
-  labels:
-    io.kompose.service: axonserver
   name: axonserver
 spec:
   ports:
@@ -20,6 +14,4 @@ spec:
       port: 8224
       targetPort: 8224
   selector:
-    io.kompose.service: axonserver
-status:
-  loadBalancer: {}
+    app: axonserver
