--- a/k8s/axonserver-statefulset.yaml
+++ b/k8s/axonserver-statefulset.yaml
@@ -1,30 +1,17 @@
-# TODO powinno byc statefulset
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.28.0 (HEAD)
-  creationTimestamp: null
-  labels:
-    io.kompose.service: axonserver
   name: axonserver
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: axonserver
-  strategy:
-    type: Recreate
+      app: axonserver
+  serviceName: axonserver
   template:
     metadata:
-      annotations:
-        kompose.cmd: kompose convert
-        kompose.version: 1.28.0 (HEAD)
-      creationTimestamp: null
       labels:
-        io.kompose.network/thesis-default: "true"
-        io.kompose.service: axonserver
+        app: axonserver
     spec:
       containers:
         - image: axoniq/axonserver:4.6.9-jdk-17-dev
@@ -33,7 +20,7 @@ spec:
             - containerPort: 8024
             - containerPort: 8124
             - containerPort: 8224
-          resources: {}
+          resources: { }
           volumeMounts:
             - mountPath: /data
               name: axonserver-data
@@ -42,7 +29,6 @@ spec:
             - mountPath: /config
               name: axonserver-config
               readOnly: true
-      hostname: axonserver
       restartPolicy: Always
       volumes:
         - name: axonserver-data
@@ -55,4 +41,3 @@ spec:
           persistentVolumeClaim:
             claimName: axonserver-config
             readOnly: true
-status: {}
