--- a/k8s/order-service-service.yaml
+++ b/k8s/order-service-service.yaml
@@ -1,12 +1,6 @@
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.28.0 (HEAD)
-  creationTimestamp: null
-  labels:
-    io.kompose.service: order-service
   name: order-service
 spec:
   ports:
@@ -14,6 +8,4 @@ spec:
       port: 8102
       targetPort: 8102
   selector:
-    io.kompose.service: order-service
-status:
-  loadBalancer: {}
+    app: order-service
