--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - master
+    tags:
+      - "v[0-9]+.[0-9]+.[0-9]+"
 jobs:
   restaurant:
     runs-on: ubuntu-latest
