--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -56,6 +56,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/amd64,linux/arm64
   order:
     runs-on: ubuntu-latest
     defaults:
@@ -105,6 +106,7 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          platforms: linux/amd64,linux/arm64
   shared:
     runs-on: ubuntu-latest
     defaults:
