Build docker image on arm64

--- a/k8s/axonserver-config-persistentvolumeclaim.yaml
+++ b/k8s/axonserver-config-persistentvolumeclaim.yaml
@@ -4,7 +4,7 @@ metadata:
   name: axonserver-config
 spec:
   accessModes:
-    - ReadOnlyMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 100Mi
