--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -136,3 +136,30 @@ jobs:
         run: ./gradlew -Pversion="${{ env.VERSION }}" publish
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  deploy:
+    if: startsWith(github.ref, 'refs/tags/v')
+    runs-on: ubuntu-latest
+    needs: [ restaurant, order, shared ]
+    environment: staging
+    permissions:
+      id-token: write
+      contents: read
+      actions: read
+    steps:
+      - uses: actions/checkout@v3
+      - uses: azure/setup-kubectl@v3
+      - uses: azure/k8s-set-context@v3
+        with:
+          method: kubeconfig
+          kubeconfig: ${{ secrets.KUBECONFIG }}
+      - uses: Azure/k8s-deploy@v4
+        with:
+          namespace: 'thesis'
+          action: deploy
+          strategy: basic
+          manifests: |
+            k8s/restaurant-service-deployment.yaml
+            k8s/order-service-deployment.yaml
+          images: |
+            ghcr.io/bartlomiejrasztabiga/thesis/restaurant:${GITHUB_REF_NAME:1}
+            ghcr.io/bartlomiejrasztabiga/thesis/order:${GITHUB_REF_NAME:1}
