--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -7,11 +7,14 @@ on:
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+"
 jobs:
-  restaurant:
+  build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        service: [restaurant, order]
     defaults:
       run:
-        working-directory: restaurant
+        working-directory: ${{ matrix.service }}
     permissions:
       contents: read
       packages: write
@@ -44,7 +47,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v4
         with:
-          images: ghcr.io/${{ github.repository }}/restaurant
+          images: ghcr.io/${{ github.repository }}/${{ matrix.service }}
           tags: |
             type=sha
             type=semver,pattern={{version}}
@@ -52,57 +55,7 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v4
         with:
-          context: ./restaurant
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          platforms: linux/amd64,linux/arm64
-  order:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: order
-    permissions:
-      contents: read
-      packages: write
-    steps:
-      - uses: actions/checkout@v3
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: "17"
-          distribution: corretto
-      - name: Set up Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          gradle-version: 8.0.2
-      - name: Build with Gradle
-        run: ./gradlew build
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Log in to the Container registry
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v4
-        with:
-          images: ghcr.io/${{ github.repository }}/order
-          tags: |
-            type=sha
-            type=semver,pattern={{version}}
-            type=raw,value=latest
-      - name: Build and push
-        uses: docker/build-push-action@v4
-        with:
-          context: ./order
+          context: ./${{ matrix.service }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
