--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -92,7 +92,7 @@ jobs:
   deploy:
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
-    needs: [ restaurant, order, shared ]
+    needs: [ build, shared ]
     environment: staging
     permissions:
       id-token: write
