--- a/order/src/main/resources/application-dev.properties
+++ b/order/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
 axon.axonserver.servers=localhost:8124
 
 spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27101
-spring.data.mongodb.database=restaurant
+spring.data.mongodb.port=27102
+spring.data.mongodb.database=order
 spring.data.mongodb.username=root
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
