--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -7,14 +7,14 @@ spec:
     - host: thesis.rasztabiga.me
       http:
         paths:
-          - path: /api/v1/order
+          - path: /api/v1/orders
             pathType: Prefix
             backend:
               service:
                 name: order-service
                 port:
                   number: 8102
-          - path: /api/v1/restaurant
+          - path: /api/v1/restaurants
             pathType: Prefix
             backend:
               service:
