--- a/k8s/restaurant-db-persistentvolumeclaim.yaml
+++ b/k8s/restaurant-db-persistentvolumeclaim.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: axonserver-events
+  name: restaurant-db-data
 spec:
   accessModes:
     - ReadWriteOnce
