--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,7 @@ updates:
     directory: "/order"
     schedule:
       interval: "daily"
+  - package-ecosystem: "gradle"
+    directory: "/gateway"
+    schedule:
+      interval: "daily"
