--- a/k8s/restaurant-service-deployment.yaml
+++ b/k8s/restaurant-service-deployment.yaml
@@ -28,7 +28,7 @@ spec:
               value: password
             - name: SPRING_DATA_MONGODB_AUTHENTICATION_DATABASE
               value: admin
-          image: ghcr.io/bartlomiejrasztabiga/thesis/restaurant:0.1.2
+          image: ghcr.io/bartlomiejrasztabiga/thesis/restaurant
           name: restaurant-service
           ports:
             - containerPort: 8101
