--- a/restaurant/src/main/resources/application.properties
+++ b/restaurant/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 spring.application.name=restaurant-service
 server.port=8101
+
+spring.security.oauth2.resourceserver.jwt.audiences=https://thesis.rasztabiga.me/api
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://rasztabigab.eu.auth0.com/
