--- a/k8s/restaurant-service-deployment.yaml
+++ b/k8s/restaurant-service-deployment.yaml
@@ -28,6 +28,8 @@ spec:
               value: password
             - name: SPRING_DATA_MONGODB_AUTHENTICATION_DATABASE
               value: admin
+            - name: MANAGEMENT_ZIPKIN_TRACING_ENDPOINT
+              value: http://zipkin.observability:9411/api/v2/spans
           image: ghcr.io/bartlomiejrasztabiga/thesis/restaurant
           name: restaurant-service
           ports:
