--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -156,7 +156,7 @@ jobs:
   deploy:
     if: startsWith(github.ref, 'refs/tags/v')
     runs-on: ubuntu-latest
-    needs: [ build-services, build-shared ]
+    needs: [ build-services, build-shared, build-frontend ]
     environment: staging
     permissions:
       id-token: write
@@ -180,8 +180,9 @@ jobs:
             k8s/restaurant-service-deployment.yaml
             k8s/order-service-deployment.yaml
             k8s/gateway-deployment.yaml
+            k8s/frontend-deployment.yaml
           images: |
             ghcr.io/bartlomiejrasztabiga/thesis/restaurant:${{ env.VERSION }}
             ghcr.io/bartlomiejrasztabiga/thesis/order:${{ env.VERSION }}
             ghcr.io/bartlomiejrasztabiga/thesis/gateway:${{ env.VERSION }}
-#           TODO frontend
+            ghcr.io/bartlomiejrasztabiga/thesis/frontend:${{ env.VERSION }}
