--- a/restaurant/src/main/resources/application.properties
+++ b/restaurant/src/main/resources/application.properties
@@ -3,3 +3,7 @@ server.port=8101
 
 spring.security.oauth2.resourceserver.jwt.audiences=https://thesis.rasztabiga.me/api
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://rasztabigab.eu.auth0.com/
+
+management.endpoint.health.probes.enabled=true
+management.health.livenessState.enabled=true
+management.health.readinessState.enabled=true
