--- a/restaurant/src/main/resources/application.properties
+++ b/restaurant/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=https://rasztabigab.eu.auth
 management.endpoint.health.probes.enabled=true
 management.health.livenessState.enabled=true
 management.health.readinessState.enabled=true
+
+axon.axonserver.client-id=restaurant-service
