--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "marked": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "remix-auth-auth0": "^1.7.0",
     "tiny-invariant": "^1.3.1"
   },
   "devDependencies": {
