--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -18,6 +18,12 @@ spec:
               value: https://thesis.rasztabiga.me/api
             - name: SESSION_SECRET
               value: "0a471d50870e4085be3e64fdc627dc87"
+            - name: AUTH_CALLBACK_URL
+              value: "https://thesis.rasztabiga.me/auth/auth0/callback"
+            - name: AUTH_CLIENT_ID
+              value: "3gSK8og83MMTCUlNrzGNfnzpBNyLlpTS"
+            - name: AUTH_CLIENT_SECRET
+              value: "fxntskIoYgCCXgxT-DYzTZraK4OwX-mwAcv8C4kZdszLDedqdtuwgTK8xB840C2G"
           image: ghcr.io/bartlomiejrasztabiga/thesis/frontend
           name: frontend
           ports:
