--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -14,6 +14,10 @@ updates:
     directory: "/gateway"
     schedule:
       interval: "daily"
+  - package-ecosystem: "gradle"
+    directory: "/shared"
+    schedule:
+      interval: "daily"
   - package-ecosystem: "npm"
     directory: "/frontend"
     schedule:
