--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
 DATABASE_URL="file:./data.db?connection_limit=1"
 SESSION_SECRET="super-duper-s3cret"
-AUTH_CALLBACK_URL=""
-AUTH_CLIENT_ID=""
-AUTH_CLIENT_SECRET=""
+AUTH_CALLBACK_URL="http://localhost:3000/auth/auth0/callback"
+AUTH_CLIENT_ID="123"
+AUTH_CLIENT_SECRET="123"
