feat(docs): Non-Functional requirements

--- a/restaurant/src/main/resources/application-dev.properties
+++ b/restaurant/src/main/resources/application-dev.properties
@@ -6,3 +6,9 @@ spring.data.mongodb.database=restaurant
 spring.data.mongodb.username=root
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
+
+#axon.axonserver.servers=axonserver.cloud.axoniq.io:443
+#axon.axonserver.keep-alive-time=0
+#axon.axonserver.ssl-enabled=true
+#axon.axonserver.context=restaurant@Thesis
+#axon.axonserver.token=qXOG7KM9mtfPSk1wh0DN
