--- a/order/src/main/resources/application-dev.properties
+++ b/order/src/main/resources/application-dev.properties
@@ -6,3 +6,9 @@ spring.data.mongodb.database=order
 spring.data.mongodb.username=root
 spring.data.mongodb.password=password
 spring.data.mongodb.authentication-database=admin
+
+#axon.axonserver.servers=axonserver.cloud.axoniq.io:443
+#axon.axonserver.keep-alive-time=0
+#axon.axonserver.ssl-enabled=true
+#axon.axonserver.context=order@Thesis
+#axon.axonserver.token=7O8TKf2UIvfY1PMJEePc
