feat(frontend): Display list of restaurants

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,3 +3,4 @@ SESSION_SECRET="super-duper-s3cret"
 AUTH_CALLBACK_URL="http://localhost:3000/auth/auth0/callback"
 AUTH_CLIENT_ID="123"
 AUTH_CLIENT_SECRET="123"
+API_GATEWAY_URL="http://localhost:3000"
