--- a/restaurant/src/main/resources/application-dev.properties
+++ b/restaurant/src/main/resources/application-dev.properties
@@ -1,11 +1,6 @@
 axon.axonserver.servers=localhost:8124
 
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27101
-spring.data.mongodb.database=restaurant
-spring.data.mongodb.username=root
-spring.data.mongodb.password=password
-spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.uri=mongodb://root:password@localhost:27101/restaurant?authSource=admin
 
 #axon.axonserver.servers=axonserver.cloud.axoniq.io:443
 #axon.axonserver.keep-alive-time=0
