--- a/k8s/restaurant-service-deployment.yaml
+++ b/k8s/restaurant-service-deployment.yaml
@@ -16,19 +16,9 @@ spec:
         - env:
             - name: AXON_AXONSERVER_SERVERS
               value: axonserver
-            - name: SPRING_DATA_MONGODB_HOST
-              value: restaurant-db
-            - name: SPRING_DATA_MONGODB_PORT
-              value: "27017"
-            - name: SPRING_DATA_MONGODB_DATABASE
-              value: restaurant
-            - name: SPRING_DATA_MONGODB_USERNAME
-              value: root
-            - name: SPRING_DATA_MONGODB_PASSWORD
-              value: password
-            - name: SPRING_DATA_MONGODB_AUTHENTICATION_DATABASE
-              value: admin
-          image: ghcr.io/bartlomiejrasztabiga/thesis/restaurant
+            - name: SPRING_DATA_MONGODB_URI
+              value: "mongodb://root:password@restaurant-db:27017/restaurant?authSource=admin"
+          image: ghcr.io/bartlomiejrasztabiga/thesis/restaurant:0.7.2
           name: restaurant-service
           ports:
             - containerPort: 8101
