--- a/frontend/package.json
+++ b/frontend/package.json
@@ -57,7 +57,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
-    "@vitest/coverage-c8": "^0.33.0",
+    "@vitest/coverage-v8": "^0.33.0",
     "autoprefixer": "^10.4.14",
     "binode": "^1.0.5",
     "c8": "^8.0.0",
