--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -4,6 +4,7 @@ server:
 uri:
   restaurant: http://localhost:8101
   order: http://localhost:8102
+  payment: http://localhost:8103
 
 management:
   endpoint:
