--- a/frontend/package.json
+++ b/frontend/package.json
@@ -64,6 +64,7 @@
     "cookie": "^0.5.0",
     "cross-env": "^7.0.3",
     "cypress": "^12.17.3",
+    "daisyui": "^3.5.1",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-cypress": "^2.13.3",
