--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -5,6 +5,7 @@ uri:
   restaurant: http://localhost:8101
   order: http://localhost:8102
   payment: http://localhost:8103
+  delivery: http://localhost:8104
 
 management:
   endpoint:
