ci(ci): Update CI

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -6,6 +6,9 @@ on:
       - master
     tags:
       - "v[0-9]+.[0-9]+.[0-9]+"
+  pull_request:
+    branches:
+      - master
 jobs:
   build-services:
     runs-on: ubuntu-latest
