--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -136,6 +136,35 @@ services:
       - MONGO_INITDB_ROOT_USERNAME=root
       - MONGO_INITDB_ROOT_PASSWORD=password
       - MONGO_INITDB_DATABASE=delivery
+
+  query-service:
+    image: ghcr.io/bartlomiejrasztabiga/thesis/query:latest
+    build:
+      context: ../query
+      dockerfile: Dockerfile
+    ports:
+      - '8105:8105'
+    depends_on:
+      - axonserver
+    environment:
+      - AXON_AXONSERVER_SERVERS=axonserver
+      - SPRING_DATA_MONGODB_HOST=query-db
+      - SPRING_DATA_MONGODB_PORT=27017
+      - SPRING_DATA_MONGODB_DATABASE=query
+      - SPRING_DATA_MONGODB_USERNAME=root
+      - SPRING_DATA_MONGODB_PASSWORD=password
+      - SPRING_DATA_MONGODB_AUTHENTICATION_DATABASE=admin
+
+  query-db:
+    image: mongo:6.0.5
+    ports:
+      - '27105:27017'
+    volumes:
+      - query-db-data:/data/db
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=root
+      - MONGO_INITDB_ROOT_PASSWORD=password
+      - MONGO_INITDB_DATABASE=query
 volumes:
   axonserver-data:
   axonserver-events:
@@ -144,3 +173,4 @@ volumes:
   order-db-data:
   payment-db-data:
   delivery-db-data:
+  query-db-data:
